Edit of head for webSite

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Los meta tags de HTML codifican información para ser interpretada por el navegador y los buscadores. ¿Sabes cuáles son imprescindibles?"/>
-	<meta name="keywords" content="palabra clave 1, palabra clave 2, palabra clave 3"/>
-	<meta name="author" content="Nombre del autor" />
-	<meta name="copyright" content="Propietario del copyright" />
+	<meta name="description" content="Pagina web de Dulce Gloria Accesorios, fabrica de accesorios para niñas y bebes."/>
+	<meta name="keywords" content="vinchas, colitas, baberos, portachupetes, chupetes, hebillas, niñas, nenas, bebes, bijouterie, accesorios, moños, unicornios, tictac, diadema."/>
+	<meta name="author" content="Ludmila Mazzei" />
+	<meta name="copyright" content="Ludmila Mazzei" />
 	<link rel="stylesheet" href="css/styles.css" type="text/css" media="">
-	<title>Título del sitio web</title>
+	<title>Dulce Gloria Accesorios</title>
 </head>
 <body>
     <!--START OF HEADER-->
