estructura principal de la pagina con carga de datos (imagenes, html, css y directorios) incluida

--- a/index.html
+++ b/index.html
@@ -1,25 +1,88 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-	<meta charset="UTF-8">
-	<meta name="description" content="Pagina web de Dulce Gloria Accesorios, fabrica de accesorios para niñas y bebes."/>
-	<meta name="keywords" content="vinchas, colitas, baberos, portachupetes, chupetes, hebillas, niñas, nenas, bebes, bijouterie, accesorios, moños, unicornios, tictac, diadema."/>
-	<meta name="author" content="Ludmila Mazzei" />
-	<meta name="copyright" content="Ludmila Mazzei" />
-	<link rel="stylesheet" href="css/styles.css" type="text/css" media="">
-	<title>Dulce Gloria Accesorios</title>
-</head>
-<body>
-    <!--START OF HEADER-->
-     <header></header>
-    <!--END OF HEADER-->
-     <nav></nav>
-    <!--START OF NAV-->
-     <section></section>
-    <!--END OF NAV-->
-     <article></article>
-    <!--START OF ARTICLE-->
-     <footer></footer>
-    <!--END OF FOOTER-->
-</body>
+<html lang="es" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="Viertport" content="width=device-width, user-scalable=no, initial=1, maximum-scale=1, minimum-scale=1">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+    <title>Dulce Gloria Accesorios</title>
+  </head>
+  <body>
+    <header>
+      <div class="contenedor">
+        <h1 class="logo">Dulce Gloria</h1>
+        <input type="checkbox" id="menu-bar" name="" value="">
+        <label class="icon-menu"for="menu-bar"><img src="images/main.png" alt=""></label>
+        <input type="checkbox" id="menu-carrito" name="" value="">
+        <label class="icon-carrito"for="menu-carrito"><img src="images/carrito.png" alt=""></label>
+        <div class="carrito">
+        <iframe src="carrito.html" frameborder="0"></iframe>
+        </div>
+        <nav class="menu">
+          <a href="index.html">Home</a>
+          <a href="Productos">Productos</a>
+          <a href="Combos">
+          kits</a>
+          <a href="Nosotros">Nosotros</a>
+          <a href="Contacto">Contacto</a>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section id="banner">
+          <img src="images/banner.png" alt="">
+          <div class="contenedor">
+             <h1>Bienvenidos a Dulce Gloria Accesorios</h1>
+            <h2>Bebes y niñas felices</h2>          </div>  
+      </section>
+      </main>
+      <section id="bienvenidos">
+        <p> Somos una empresa familiar dedicada a la fabricaciòn artesanal de 
+accesorios para bebes y niñas, todos ellos elaborados con materia
+prima de primera calidad, entre los que encontrarà vinchas, colitas, 
+hebillas, baberos, portachupetes y mas, con colores y estampados que
+se van renovando con cada temporada y le dan un toque de alegrìa al
+día día de los más pequeños.
+ Estamos situados en la ciudad de Pergamino, noroeste de la Pcia de
+Buenos Aires
+ Con el mejor precio del mercado, le ofrecemos la posibilidad de
+anexar Dulce Gloria Accesorios a sus ventas, con combos hechos a su 
+medida. 
+ Dispondrá de una distribuciòn ràpida y segura.
+ Contará, a su elección, de diversas facilidades de pago.
+ NO DUDE EN CONSULTARNOS y un asesor comercial le brindará toda la 
+información necesaria.</p>
+      </section>
+      <section id="blog">
+        <h3>Lo nuevo</h3>
+        <div class="contenedor">
+          <a href="vinchas.html">
+           <article class="boton">
+            <img src="images/vinchas.png" alt="">
+                <h4>Vinchas Rigidas</h4>
+          </article>
+            </a>
+          <article class="boton">
+            <img src="images/velastizadas.png" alt="">
+            <h4>Vinchas Elastizadas</h4>
+          </article>
+          <article class="boton">
+            <img src="images/tictac.png" alt="">
+            <h4>Hebillas Tic Tac</h4>
+          </article>
+          <article class="boton">
+            <img src="images/colitas.png" alt="">
+            <h4>Colitas</h4>
+          </article>
+          <article class="boton">
+            <img src="images/agarrachupetes.png" alt="">
+            <h4>Agarrachupetes</h4>
+          </article>
+          <article class="boton">
+            <img src="images/tictac.jpg" alt="">
+            <h4>Agarrapelusas</h4>
+          </article>
+        </div>
+      </section>
+  </body>
 </html>
