agregue imagenes para el slide del banner, tambien programe un slide, modifique banner.css y el index (quedo con error de sintaxis, revisar)

--- a/index.html
+++ b/index.html
@@ -28,61 +28,65 @@
         </nav>
       </div>
     </header>
-    <main>
-      <section id="banner">
-          <img src="images/banner.png" alt="">
-          <div class="contenedor">
-             <h1>Bienvenidos a Dulce Gloria Accesorios</h1>
-            <h2>Bebes y niñas felices</h2>          </div>  
-      </section>
-      </main>
-      <section id="bienvenidos">
-        <p> Somos una empresa familiar dedicada a la fabricaciòn artesanal de 
-accesorios para bebes y niñas, todos ellos elaborados con materia
-prima de primera calidad, entre los que encontrarà vinchas, colitas, 
-hebillas, baberos, portachupetes y mas, con colores y estampados que
-se van renovando con cada temporada y le dan un toque de alegrìa al
-día día de los más pequeños.
- Estamos situados en la ciudad de Pergamino, noroeste de la Pcia de
-Buenos Aires
- Con el mejor precio del mercado, le ofrecemos la posibilidad de
-anexar Dulce Gloria Accesorios a sus ventas, con combos hechos a su 
-medida. 
- Dispondrá de una distribuciòn ràpida y segura.
- Contará, a su elección, de diversas facilidades de pago.
- NO DUDE EN CONSULTARNOS y un asesor comercial le brindará toda la 
-información necesaria.</p>
-      </section>
-      <section id="blog">
+    <section>
+        <div class="slide">
+            <ul>
+                <li><img src="images/1.png" alt=""></li>
+                <li><img src="images/2.png" alt=""></li>
+                <li><img src="images/3.png" alt=""></li>
+                <li><img src="images/4.png" alt=""></li>
+            </ul>
+        </div>  
+    </section>
+    <section id="bienvenidos">
+        <h1>ENCONTRANOS EN...</h1>
+        <ul>
+            <li><img src="images/instagram.png" alt=""></li>
+            <li><img src="images/facebook.png" alt=""></li>
+            <li><img src="images/mercadolibre.png" alt=""></li>
+        </ul>
+    </section>
+    <section id="blog">
         <h3>Lo nuevo</h3>
         <div class="contenedor">
-          <a href="vinchas.html">
-           <article class="boton">
-            <img src="images/vinchas.png" alt="">
+            <a href="vinchas.html">
+                <article class="boton">
+                <img src="images/vinchas.png" alt="">
                 <h4>Vinchas Rigidas</h4>
-          </article>
+                </article>
             </a>
-          <article class="boton">
-            <img src="images/velastizadas.png" alt="">
-            <h4>Vinchas Elastizadas</h4>
-          </article>
-          <article class="boton">
-            <img src="images/tictac.png" alt="">
-            <h4>Hebillas Tic Tac</h4>
-          </article>
-          <article class="boton">
-            <img src="images/colitas.png" alt="">
-            <h4>Colitas</h4>
-          </article>
-          <article class="boton">
-            <img src="images/agarrachupetes.png" alt="">
-            <h4>Agarrachupetes</h4>
-          </article>
-          <article class="boton">
-            <img src="images/tictac.jpg" alt="">
-            <h4>Agarrapelusas</h4>
-          </article>
+            <a href="vinchas.html">
+                <article class="boton">
+                <img src="images/velastizadas.png" alt="">
+                <h4>Vinchas Elastizadas</h4>
+                </article>
+            </a>                  
+            <a href="vinchas.html">
+                <article class="boton">
+                <img src="images/tictac.png" alt="">
+                <h4>Hebillas Tic Tac</h4>
+                </article>
+            </a>
+            <a href="vinchas.html">         
+                <article class="boton">
+                <img src="images/colitas.png" alt="">
+                <h4>Colitas</h4>
+                </article>
+            </a>
+            <a href="vinchas.html">
+                <article class="boton">
+                <img src="images/agarrachupetes.png" alt="">
+                <h4>Agarrachupetes</h4>
+                </article>
+            </a>
+            <a href="vinchas.html">
+                <article class="boton">
+                <img src="images/tictac.jpg" alt="">
+                <h4>Agarrapelusas</h4>
+                </article>
+            </a>
         </div>
       </section>
+    <footer></footer>
   </body>
 </html>
